// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flow code generation #generateSource() should annotate custom scalars as string 1`] = `
"/* @flow */
/* eslint-disable */
//  This file was automatically generated and should not be edited.

export type CustomScalarQuery = {|
  misc: ? {|
    __typename: \\"OddType\\",
    date: ?any,
  |},
|};"
`;

exports[`Flow code generation #generateSource() should generate array query operations 1`] = `
"/* @flow */
/* eslint-disable */
//  This file was automatically generated and should not be edited.

export type ReviewsStarsQuery = {|
  reviews: ? Array<? {|
    __typename: \\"Review\\",
    // The number of stars this review gave, 1-5
    stars: number,
  |} >,
|};"
`;

exports[`Flow code generation #generateSource() should generate correct typedefs with a multiple custom fragments 1`] = `
"/* @flow */
/* eslint-disable */
//  This file was automatically generated and should not be edited.

// The episodes in the Star Wars trilogy
export type Episode =
  \\"EMPIRE\\" | // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  \\"JEDI\\" | // Star Wars Episode VI: Return of the Jedi, released in 1983.
  \\"NEWHOPE\\"; // Star Wars Episode IV: A New Hope, released in 1977.


export type HeroAndFriendsNamesQueryVariables = {|
  episode?: ?Episode,
|};

export type HeroAndFriendsNamesQuery = {|
  hero: ?( {
      __typename: \\"Human\\",
      // The name of the character
      name: string,
      // The friends of the character, or an empty list if they have none
      friends: ?Array< ?( {
          __typename: \\"Human\\",
          // The name of the character
          name: string,
        } | {
          __typename: \\"Droid\\",
          // The name of the character
          name: string,
        }
      ) >,
    } | {
      __typename: \\"Droid\\",
      // The name of the character
      name: string,
      // The friends of the character, or an empty list if they have none
      friends: ?Array< ?( {
          __typename: \\"Human\\",
          // The name of the character
          name: string,
        } | {
          __typename: \\"Droid\\",
          // The name of the character
          name: string,
        }
      ) >,
    }
  ),
|};

export type FriendFragment = ( {
      __typename: \\"Human\\",
      // The name of the character
      name: string,
    } | {
      __typename: \\"Droid\\",
      // The name of the character
      name: string,
    }
  );

export type PersonFragment = ( {
      __typename: \\"Human\\",
      // The name of the character
      name: string,
    } | {
      __typename: \\"Droid\\",
      // The name of the character
      name: string,
    }
  );"
`;

exports[`Flow code generation #generateSource() should generate correct typedefs with a single custom fragment 1`] = `
"/* @flow */
/* eslint-disable */
//  This file was automatically generated and should not be edited.

// The episodes in the Star Wars trilogy
export type Episode =
  \\"EMPIRE\\" | // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  \\"JEDI\\" | // Star Wars Episode VI: Return of the Jedi, released in 1983.
  \\"NEWHOPE\\"; // Star Wars Episode IV: A New Hope, released in 1977.


export type HeroAndFriendsNamesQueryVariables = {|
  episode?: ?Episode,
|};

export type HeroAndFriendsNamesQuery = {|
  hero: ?( {
      __typename: \\"Human\\",
      // The name of the character
      name: string,
      // The friends of the character, or an empty list if they have none
      friends: ?Array< ?( {
          __typename: \\"Human\\",
          // The name of the character
          name: string,
        } | {
          __typename: \\"Droid\\",
          // The name of the character
          name: string,
        }
      ) >,
    } | {
      __typename: \\"Droid\\",
      // The name of the character
      name: string,
      // The friends of the character, or an empty list if they have none
      friends: ?Array< ?( {
          __typename: \\"Human\\",
          // The name of the character
          name: string,
        } | {
          __typename: \\"Droid\\",
          // The name of the character
          name: string,
        }
      ) >,
    }
  ),
|};

export type FriendFragment = ( {
      __typename: \\"Human\\",
      // The name of the character
      name: string,
    } | {
      __typename: \\"Droid\\",
      // The name of the character
      name: string,
    }
  );"
`;

exports[`Flow code generation #generateSource() should generate fragmented query operations 1`] = `
"/* @flow */
/* eslint-disable */
//  This file was automatically generated and should not be edited.

export type HeroAndFriendsNamesQuery = {|
  hero: ?( {
      __typename: \\"Human\\",
      // The name of the character
      name: string,
      // The friends of the character, or an empty list if they have none
      friends: ?Array< ?( {
          __typename: \\"Human\\",
          // The name of the character
          name: string,
        } | {
          __typename: \\"Droid\\",
          // The name of the character
          name: string,
        }
      ) >,
    } | {
      __typename: \\"Droid\\",
      // The name of the character
      name: string,
      // The friends of the character, or an empty list if they have none
      friends: ?Array< ?( {
          __typename: \\"Human\\",
          // The name of the character
          name: string,
        } | {
          __typename: \\"Droid\\",
          // The name of the character
          name: string,
        }
      ) >,
    }
  ),
|};

export type heroFriendsFragment = ( {
      __typename: \\"Human\\",
      // The friends of the character, or an empty list if they have none
      friends: ?Array< ?( {
          __typename: \\"Human\\",
          // The name of the character
          name: string,
        } | {
          __typename: \\"Droid\\",
          // The name of the character
          name: string,
        }
      ) >,
    } | {
      __typename: \\"Droid\\",
      // The friends of the character, or an empty list if they have none
      friends: ?Array< ?( {
          __typename: \\"Human\\",
          // The name of the character
          name: string,
        } | {
          __typename: \\"Droid\\",
          // The name of the character
          name: string,
        }
      ) >,
    }
  );"
`;

exports[`Flow code generation #generateSource() should generate mutation operations with complex input types 1`] = `
"/* @flow */
/* eslint-disable */
//  This file was automatically generated and should not be edited.

// The episodes in the Star Wars trilogy
export type Episode =
  \\"EMPIRE\\" | // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  \\"JEDI\\" | // Star Wars Episode VI: Return of the Jedi, released in 1983.
  \\"NEWHOPE\\"; // Star Wars Episode IV: A New Hope, released in 1977.


export type ReviewInput = {|
  // 0-5 stars
  stars: number,
  // Comment about the movie, optional
  commentary?: ?string,
  // Favorite color, optional
  favorite_color?: ?ColorInput,
|};

export type ColorInput = {|
  red: number,
  green: number,
  blue: number,
|};

export type ReviewMovieMutationVariables = {|
  episode?: ?Episode,
  review?: ?ReviewInput,
|};

export type ReviewMovieMutation = {|
  createReview: ? {|
    __typename: \\"Review\\",
    // The number of stars this review gave, 1-5
    stars: number,
    // Comment about the movie
    commentary: ?string,
  |},
|};"
`;

exports[`Flow code generation #generateSource() should generate query operations with inline fragments 1`] = `
"/* @flow */
/* eslint-disable */
//  This file was automatically generated and should not be edited.

export type HeroAndDetailsQuery = {|
  hero: ?( {
      __typename: \\"Human\\",
      // What this human calls themselves
      name: string,
      // Height in the preferred unit, default is meters
      height: ?number,
    } | {
      __typename: \\"Droid\\",
      // What others call this droid
      name: string,
      // This droid's primary function
      primaryFunction: ?string,
    }
  ),
|};

export type HeroDetailsFragment = ( {
      __typename: \\"Human\\",
      // Height in the preferred unit, default is meters
      height: ?number,
    } | {
      __typename: \\"Droid\\",
      // This droid's primary function
      primaryFunction: ?string,
    }
  );"
`;

exports[`Flow code generation #generateSource() should generate simple nested query operations including input variables 1`] = `
"/* @flow */
/* eslint-disable */
//  This file was automatically generated and should not be edited.

// The episodes in the Star Wars trilogy
export type Episode =
  \\"EMPIRE\\" | // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  \\"JEDI\\" | // Star Wars Episode VI: Return of the Jedi, released in 1983.
  \\"NEWHOPE\\"; // Star Wars Episode IV: A New Hope, released in 1977.


export type HeroAndFriendsNamesQueryVariables = {|
  episode?: ?Episode,
|};

export type HeroAndFriendsNamesQuery = {|
  hero: ?( {
      __typename: \\"Human\\",
      // The name of the character
      name: string,
      // The friends of the character, or an empty list if they have none
      friends: ?Array< ?( {
          __typename: \\"Human\\",
          // The name of the character
          name: string,
        } | {
          __typename: \\"Droid\\",
          // The name of the character
          name: string,
        }
      ) >,
    } | {
      __typename: \\"Droid\\",
      // The name of the character
      name: string,
      // The friends of the character, or an empty list if they have none
      friends: ?Array< ?( {
          __typename: \\"Human\\",
          // The name of the character
          name: string,
        } | {
          __typename: \\"Droid\\",
          // The name of the character
          name: string,
        }
      ) >,
    }
  ),
|};"
`;

exports[`Flow code generation #generateSource() should generate simple nested with required elements in lists 1`] = `
"/* @flow */
/* eslint-disable */
//  This file was automatically generated and should not be edited.

export type StarshipCoordsQuery = {|
  starship: ? {|
    __typename: \\"Starship\\",
    coordinates: ?Array< Array< number > >,
  |},
|};"
`;

exports[`Flow code generation #generateSource() should generate simple query operations 1`] = `
"/* @flow */
/* eslint-disable */
//  This file was automatically generated and should not be edited.

export type HeroNameQuery = {|
  hero: ?( {
      __typename: \\"Human\\",
      // The name of the character
      name: string,
    } | {
      __typename: \\"Droid\\",
      // The name of the character
      name: string,
    }
  ),
|};"
`;

exports[`Flow code generation #generateSource() should generate simple query operations including input variables 1`] = `
"/* @flow */
/* eslint-disable */
//  This file was automatically generated and should not be edited.

// The episodes in the Star Wars trilogy
export type Episode =
  \\"EMPIRE\\" | // Star Wars Episode V: The Empire Strikes Back, released in 1980.
  \\"JEDI\\" | // Star Wars Episode VI: Return of the Jedi, released in 1983.
  \\"NEWHOPE\\"; // Star Wars Episode IV: A New Hope, released in 1977.


export type HeroNameQueryVariables = {|
  episode?: ?Episode,
|};

export type HeroNameQuery = {|
  hero: ?( {
      __typename: \\"Human\\",
      // The name of the character
      name: string,
    } | {
      __typename: \\"Droid\\",
      // The name of the character
      name: string,
    }
  ),
|};"
`;

exports[`Flow code generation #generateSource() should handle comments in enums 1`] = `
"/* @flow */
/* eslint-disable */
//  This file was automatically generated and should not be edited.

export type EnumCommentTestCase =
  \\"first\\" | // This is a single-line comment
  // This is a
  // multi-line
  // comment.
  \\"second\\";


export type CustomScalarQuery = {|
  commentTest: ? {|
    __typename: \\"CommentTest\\",
    enumCommentTest: ?EnumCommentTestCase,
  |},
|};"
`;

exports[`Flow code generation #generateSource() should handle interfaces at root 1`] = `
"/* @flow */
/* eslint-disable */
//  This file was automatically generated and should not be edited.

export type CustomScalarQuery = {|
  interfaceTest: ?( {
      __typename: \\"ImplA\\",
      prop: string,
      propA: string,
    } | {
      __typename: \\"ImplB\\",
      prop: string,
      propB: ?number,
    }
  ),
|};"
`;

exports[`Flow code generation #generateSource() should handle multi-line comments 1`] = `
"/* @flow */
/* eslint-disable */
//  This file was automatically generated and should not be edited.

export type CustomScalarQuery = {|
  commentTest: ? {|
    __typename: \\"CommentTest\\",
    // This is a
    // multi-line
    // comment.
    multiLine: ?string,
  |},
|};"
`;

exports[`Flow code generation #generateSource() should handle scalars at root 1`] = `
"/* @flow */
/* eslint-disable */
//  This file was automatically generated and should not be edited.

export type RootScalarQuery = {|
  scalarTest: boolean,
|};"
`;

exports[`Flow code generation #generateSource() should handle single line comments 1`] = `
"/* @flow */
/* eslint-disable */
//  This file was automatically generated and should not be edited.

export type CustomScalarQuery = {|
  commentTest: ? {|
    __typename: \\"CommentTest\\",
    // This is a single-line comment
    singleLine: ?string,
  |},
|};"
`;

exports[`Flow code generation #generateSource() should handle unions at root 1`] = `
"/* @flow */
/* eslint-disable */
//  This file was automatically generated and should not be edited.

export type CustomScalarQuery = {|
  unionTest: ?( {
      __typename: \\"PartialA\\",
      prop: string,
    } | {
      __typename: \\"PartialB\\",
      prop: string,
    }
  ),
|};"
`;

exports[`Flow code generation #generateSource() should have __typename value in nested property 1`] = `
"/* @flow */
/* eslint-disable */
//  This file was automatically generated and should not be edited.

export type HeroNameQuery = {|
  hero: ?( {
      __typename: \\"Human\\",
      // The friends of the human exposed as a connection with edges
      friendsConnection: {|
        __typename: \\"FriendsConnection\\",
        // The edges for each of the character's friends.
        edges: ? Array<? {|
          __typename: \\"FriendsEdge\\",
          // The character represented by this friendship edge
          node: ?( {
              __typename: \\"Human\\",
              // The name of the character
              name: string,
            } | {
              __typename: \\"Droid\\",
              // The name of the character
              name: string,
            }
          ),
        |} >,
      |},
      // A list of starships this person has piloted, or an empty list if none
      starships: ? Array<? {|
        __typename: \\"Starship\\",
        // The name of the starship
        name: string,
      |} >,
    } | {
      __typename: \\"Droid\\",
      // The friends of the character exposed as a connection with edges
      friendsConnection: {|
        __typename: \\"FriendsConnection\\",
        // The edges for each of the character's friends.
        edges: ? Array<? {|
          __typename: \\"FriendsEdge\\",
          // The character represented by this friendship edge
          node: ?( {
              __typename: \\"Human\\",
              // The name of the character
              name: string,
            } | {
              __typename: \\"Droid\\",
              // The name of the character
              name: string,
            }
          ),
        |} >,
      |},
    }
  ),
|};"
`;

exports[`Flow code generation #generateSource() should have __typename value matching fragment type on generic type 1`] = `
"/* @flow */
/* eslint-disable */
//  This file was automatically generated and should not be edited.

export type HeroNameQuery = {|
  hero: ?( {
      __typename: \\"Human\\",
      // The name of the character
      name: string,
    } | {
      __typename: \\"Droid\\",
      // The name of the character
      name: string,
    }
  ),
|};

export type HeroWithNameFragment = ( {
      __typename: \\"Human\\",
      // The name of the character
      name: string,
    } | {
      __typename: \\"Droid\\",
      // The name of the character
      name: string,
    }
  );"
`;

exports[`Flow code generation #generateSource() should have __typename value matching fragment type on specific type 1`] = `
"/* @flow */
/* eslint-disable */
//  This file was automatically generated and should not be edited.

export type DroidNameQuery = {|
  droid: ? {|
    __typename: \\"Droid\\",
    // What others call this droid
    name: string,
  |},
|};

export type DroidWithNameFragment = {|
  __typename: \\"Droid\\",
  // What others call this droid
  name: string,
|};"
`;
